--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 [Tt]humbs.db
 *.DS_Store
 
+#Action Logs
+ACD3D10LOG.txt
+ACOpenAL.txt
+NetworkLOG.txt
+RenderLOG.txt
+XAudioLOG.txt
+
 #Visual Studio files
 *.[Oo]bj
 *.user
