Remove render to texture

--- a/src/Engine/D3DEngine/D3DEngine.vcxproj
+++ b/src/Engine/D3DEngine/D3DEngine.vcxproj
@@ -116,6 +116,7 @@
     <ClCompile Include="ACD3D10VertexCache.cpp" />
     <ClCompile Include="ACD3D10VertexLayoutProvider.cpp" />
     <ClCompile Include="ACD3D10VertexManager.cpp" />
+    <ClCompile Include="ACD3D10VpComponents.cpp" />
     <ClCompile Include="ACD3D10VpComponents.h" />
   </ItemGroup>
   <ItemGroup>
