--- a/src/Engine/D3DEngine/D3DEngine.vcxproj.filters
+++ b/src/Engine/D3DEngine/D3DEngine.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="Source Files\Common">
       <UniqueIdentifier>{63911014-272d-40d4-830a-752e1ca1917c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\ContentManager">
-      <UniqueIdentifier>{edc9f456-fd35-4fdf-a7a4-d594978796a5}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Core">
       <UniqueIdentifier>{509572a9-6e22-4070-9566-77ea6aaa8775}</UniqueIdentifier>
     </Filter>
@@ -68,9 +65,6 @@
     <ClCompile Include="ACD3D10Globals.cpp">
       <Filter>Source Files\Common</Filter>
     </ClCompile>
-    <ClCompile Include="ACD3D10VpComponents.h">
-      <Filter>Header Files\ContentManager</Filter>
-    </ClCompile>
     <ClCompile Include="ACD3D10.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
@@ -85,6 +79,12 @@
     </ClCompile>
     <ClCompile Include="ACD3D10RenderToTexture.cpp">
       <Filter>Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="ACD3D10VpComponents.h">
+      <Filter>Header Files\Common</Filter>
+    </ClCompile>
+    <ClCompile Include="ACD3D10VpComponents.cpp">
+      <Filter>Source Files\Common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
