Inclusao do Emissor de particulas

--- a/src/Engine/Engine/Engine.vcxproj
+++ b/src/Engine/Engine/Engine.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="ACTimeAccum.h" />
     <ClInclude Include="ACTimeControl.h" />
     <ClInclude Include="ACParticleTypes.h" />
+    <ClInclude Include="ACParticlesEmitter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ACAFTLoader.cpp" />
