WrapperCLI Release References OK

--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
@@ -64,11 +64,12 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <AdditionalIncludeDirectories>..\Engine;..\EngineMath;..\EngineCommon</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>Engine.lib;EngineMath.lib;EngineCommon.lib;winmm.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
