--- a/src/lua-5.1.5/lualib.vcxproj
+++ b/src/lua-5.1.5/lualib.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="src\ltable.h" />
     <ClInclude Include="src\ltm.h" />
     <ClInclude Include="src\lua.h" />
+    <ClInclude Include="src\lua.hpp" />
     <ClInclude Include="src\luaconf.h" />
     <ClInclude Include="src\lualib.h" />
     <ClInclude Include="src\lundump.h" />
