--- a/src/lua-5.1.5/lualib.vcxproj.filters
+++ b/src/lua-5.1.5/lualib.vcxproj.filters
@@ -169,5 +169,8 @@
     <ClInclude Include="src\lzio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\lua.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
