--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj.filters
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WACRenderer.h">
+    <ClInclude Include="ACRendererW.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClCompile Include="Stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WACRenderer.cpp">
+    <ClCompile Include="ACRendererW.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
