--- a/src/Engine/D3DEngine/D3DEngine.vcxproj
+++ b/src/Engine/D3DEngine/D3DEngine.vcxproj
@@ -96,6 +96,10 @@
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ACD3DConfigurations.h" />
