--- a/src/SilentDimProject/SilentDimProject.vcxproj
+++ b/src/SilentDimProject/SilentDimProject.vcxproj
@@ -43,7 +43,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
+    <OutDir>$(ProjectDir)\Build\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -81,13 +81,13 @@
       <AdditionalDependencies>Engine.lib;Lua.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(SolutionDir)$(Configuration)\ACD3DEngine.dll $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\ACDIEngine.dll $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\ACOpenALEngine.dll $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\ACWSEngine.dll $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)$(Configuration)\
-copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)$(Configuration)\
+      <Command>copy $(SolutionDir)$(Configuration)\ACD3DEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACDIEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACOpenALEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ACWSEngine.dll $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)\Build\
 
 
 </Command>
