--- a/src/Engine/Demo/Demo.vcxproj
+++ b/src/Engine/Demo/Demo.vcxproj
@@ -69,6 +69,9 @@
       <DelayLoadDLLs>%(DelayLoadDLLs)</DelayLoadDLLs>
       <LargeAddressAware>false</LargeAddressAware>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -101,7 +104,8 @@ copy $(SolutionDir)$(Configuration)\ACOpenALEngine.dll $(ProjectDir)\Build\
 copy $(SolutionDir)$(Configuration)\ACWSEngine.dll $(ProjectDir)\Build\
 copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)\Build\
 copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)\Build\
-copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)\Build\</Command>
+copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)\Build\
+copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)\Build\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
