--- a/src/Engine/Engine/Engine.vcxproj
+++ b/src/Engine/Engine/Engine.vcxproj
@@ -65,6 +65,9 @@
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
     </Lib>
+    <PreBuildEvent>
+      <Command>copy $(ProjectDir)\ConfigurationFile.ini $(SolutionDir)$(Configuration)\</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -90,8 +93,14 @@
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
     </Lib>
+    <PreBuildEvent>
+      <Command>copy $(ProjectDir)\ConfigurationFile.ini $(SolutionDir)$(Configuration)\</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="ConfigurationFile.ini">
+      <FileType>Text</FileType>
+    </None>
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +112,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\EngineCommon\ACConfigurations.h" />
     <ClInclude Include="ACAFTLoader.h" />
     <ClInclude Include="ACAMTLoader.h" />
     <ClInclude Include="ACAMTStructs.h" />
@@ -148,6 +158,7 @@
     <ClInclude Include="ACParticlesEmitter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\EngineCommon\ACConfigurations.cpp" />
     <ClCompile Include="ACAFTLoader.cpp" />
     <ClCompile Include="ACAMTLoader.cpp" />
     <ClCompile Include="ACAudio.cpp" />
