--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
@@ -79,12 +79,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ACConfigurationsW.h" />
     <ClInclude Include="ACRenderDeviceW.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="ACRendererW.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ACConfigurationsW.cpp" />
     <ClCompile Include="ACRenderDeviceW.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Stdafx.cpp">
@@ -99,6 +101,11 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Engine\Engine.vcxproj">
+      <Project>{d32bc7d9-98f2-4097-9241-230c832e3331}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
