--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj.filters
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj.filters
@@ -13,6 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Engine">
+      <UniqueIdentifier>{51c41f4b-df73-41d7-b83d-67e70b6bf420}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Engine\RenderEngine">
+      <UniqueIdentifier>{d13ab50f-d989-4f3d-afb8-c45d3caf5638}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine">
+      <UniqueIdentifier>{7607616a-ad0a-45f5-9022-37bbaa5daa14}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engine\RenderEngine">
+      <UniqueIdentifier>{83bf204b-8b7d-41a9-88e7-354815a52cee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stdafx.h">
@@ -21,10 +33,13 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ACRendererW.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ACRenderDeviceW.h">
+      <Filter>Header Files\Engine\RenderEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="ACRendererW.h">
+      <Filter>Header Files\Engine\RenderEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="ACConfigurationsW.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,10 +50,13 @@
     <ClCompile Include="Stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ACRendererW.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ACRenderDeviceW.cpp">
+      <Filter>Source Files\Engine\RenderEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="ACRendererW.cpp">
+      <Filter>Source Files\Engine\RenderEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="ACConfigurationsW.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
