--- a/src/Engine/DemoCLI/DemoCLI.csproj
+++ b/src/Engine/DemoCLI/DemoCLI.csproj
@@ -83,6 +83,13 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>copy $(SolutionDir)$(Configuration)\ACD3DEngine.dll $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\ConfigurationFile.ini $(ProjectDir)bin\$(Configuration)\</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
