--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ACConfigurationsW.h" />
+    <ClInclude Include="ACInputDeviceW.h" />
+    <ClInclude Include="ACInputW.h" />
     <ClInclude Include="ACRenderDeviceW.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
@@ -87,6 +89,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ACConfigurationsW.cpp" />
+    <ClCompile Include="ACInputDeviceW.cpp" />
+    <ClCompile Include="ACInputW.cpp" />
     <ClCompile Include="ACRenderDeviceW.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Stdafx.cpp">
