--- a/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
+++ b/src/Engine/EngineWrapperCLI/EngineWrapperCLI.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="ACConfigurationsW.h" />
     <ClInclude Include="ACInputDeviceW.h" />
     <ClInclude Include="ACInputW.h" />
+    <ClInclude Include="ACKeyboardW.h" />
     <ClInclude Include="ACMouseW.h" />
     <ClInclude Include="ACRenderDeviceW.h" />
     <ClInclude Include="resource.h" />
@@ -92,6 +93,7 @@
     <ClCompile Include="ACConfigurationsW.cpp" />
     <ClCompile Include="ACInputDeviceW.cpp" />
     <ClCompile Include="ACInputW.cpp" />
+    <ClCompile Include="ACKeyboardW.cpp" />
     <ClCompile Include="ACMouseW.cpp" />
     <ClCompile Include="ACRenderDeviceW.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
