--- a/src/Engine/DemoCLI/DemoCLI.csproj
+++ b/src/Engine/DemoCLI/DemoCLI.csproj
@@ -86,6 +86,8 @@
   <PropertyGroup>
     <PreBuildEvent>copy $(SolutionDir)$(Configuration)\ACD3DEngine.dll $(ProjectDir)bin\$(Configuration)\
 copy $(SolutionDir)$(Configuration)\ACDIEngine.dll $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\ACWSEngine.dll $(ProjectDir)bin\$(Configuration)\
+copy $(SolutionDir)$(Configuration)\ACOpenALEngine.dll $(ProjectDir)bin\$(Configuration)\
 copy $(SolutionDir)$(Configuration)\Engine.lib $(ProjectDir)bin\$(Configuration)\
 copy $(SolutionDir)$(Configuration)\EngineCommon.lib $(ProjectDir)bin\$(Configuration)\
 copy $(SolutionDir)$(Configuration)\EngineMath.lib $(ProjectDir)bin\$(Configuration)\
